.antlr/gramaticaParser.java
// Generated from /home/deivi/Desktop/visual/entrega/lenguaje/gramatica.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class gramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, PRINCIPAL=2, VAR=3, MUECHE=4, CHI=5, SINO=6, MIENTRAS=7, PARA=8, 
		MANDELE=9, BLOQUE_FUNCION=10, TRAIGASE=11, FUNCA=12, PUNTO=13, PUNTOPUNTO=14, 
		PREG_DER=15, PREG_IZQ=16, MAS=17, MENOS=18, MUL=19, DIV=20, IGUAL=21, 
		MODULO=22, ELEVACION=23, PAR_DER=24, PAR_IZQ=25, LLAVE_DER=26, LLAVE_IZQ=27, 
		COR_DER=28, COR_IZQ=29, ID=30, NUMERO=31, PALABRAS=32, PUNTO_COMA=33, 
		NL=34, WS=35, IGUALDAD=36, DIFERENTE=37, MAYOR=38, MENOR=39, MAYOR_IGUAL=40, 
		MENOR_IGUAL=41, AND=42, OR=43, NOT=44, COMILLAS=45;
	public static final int
		RULE_programa = 0, RULE_importaciones = 1, RULE_importacion = 2, RULE_instrucciones = 3, 
		RULE_instruccion = 4, RULE_definicion_funcion = 5, RULE_llamada_funcion = 6, 
		RULE_argumentos = 7, RULE_bloque_funcion = 8, RULE_retorno = 9, RULE_declaracion = 10, 
		RULE_impresion = 11, RULE_asignacion = 12, RULE_condicion = 13, RULE_condicion_si_no = 14, 
		RULE_ciclo_for = 15, RULE_ciclo_while = 16, RULE_expresion = 17, RULE_expresion_verdad = 18, 
		RULE_expresion_si = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "importaciones", "importacion", "instrucciones", "instruccion", 
			"definicion_funcion", "llamada_funcion", "argumentos", "bloque_funcion", 
			"retorno", "declaracion", "impresion", "asignacion", "condicion", "condicion_si_no", 
			"ciclo_for", "ciclo_while", "expresion", "expresion_verdad", "expresion_si"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'inicio'", "'var'", "'mueche'", "'chi'", "'sino'", "'mientras'", 
			"'para'", "'mandele'", null, "'traigase'", "'funca'", "'.'", "'..'", 
			"'?'", "'\\u00BF'", "'+'", "'-'", "'*'", "'/'", "'='", "'%'", "'^'", 
			"')'", "'('", "'}'", "'{'", "']'", "'['", null, null, null, "';'", null, 
			null, "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", "'!'", 
			"'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "PRINCIPAL", "VAR", "MUECHE", "CHI", "SINO", "MIENTRAS", 
			"PARA", "MANDELE", "BLOQUE_FUNCION", "TRAIGASE", "FUNCA", "PUNTO", "PUNTOPUNTO", 
			"PREG_DER", "PREG_IZQ", "MAS", "MENOS", "MUL", "DIV", "IGUAL", "MODULO", 
			"ELEVACION", "PAR_DER", "PAR_IZQ", "LLAVE_DER", "LLAVE_IZQ", "COR_DER", 
			"COR_IZQ", "ID", "NUMERO", "PALABRAS", "PUNTO_COMA", "NL", "WS", "IGUALDAD", 
			"DIFERENTE", "MAYOR", "MENOR", "MAYOR_IGUAL", "MENOR_IGUAL", "AND", "OR", 
			"NOT", "COMILLAS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PRINCIPAL() { return getToken(gramaticaParser.PRINCIPAL, 0); }
		public TerminalNode LLAVE_IZQ() { return getToken(gramaticaParser.LLAVE_IZQ, 0); }
		public TerminalNode LLAVE_DER() { return getToken(gramaticaParser.LLAVE_DER, 0); }
		public List<ImportacionesContext> importaciones() {
			return getRuleContexts(ImportacionesContext.class);
		}
		public ImportacionesContext importaciones(int i) {
			return getRuleContext(ImportacionesContext.class,i);
		}
		public List<InstruccionesContext> instrucciones() {
			return getRuleContexts(InstruccionesContext.class);
		}
		public InstruccionesContext instrucciones(int i) {
			return getRuleContext(InstruccionesContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TRAIGASE) {
				{
				{
				setState(40);
				importaciones();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1073763256L) != 0)) {
				{
				{
				setState(46);
				instrucciones();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			match(PRINCIPAL);
			setState(53);
			match(LLAVE_IZQ);
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1073763256L) != 0)) {
				{
				setState(54);
				instrucciones();
				}
			}

			setState(57);
			match(LLAVE_DER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportacionesContext extends ParserRuleContext {
		public List<ImportacionContext> importacion() {
			return getRuleContexts(ImportacionContext.class);
		}
		public ImportacionContext importacion(int i) {
			return getRuleContext(ImportacionContext.class,i);
		}
		public ImportacionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importaciones; }
	}

	public final ImportacionesContext importaciones() throws RecognitionException {
		ImportacionesContext _localctx = new ImportacionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importaciones);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(60); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(59);
					importacion();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(62); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportacionContext extends ParserRuleContext {
		public TerminalNode TRAIGASE() { return getToken(gramaticaParser.TRAIGASE, 0); }
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(gramaticaParser.PUNTO_COMA, 0); }
		public ImportacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importacion; }
	}

	public final ImportacionContext importacion() throws RecognitionException {
		ImportacionContext _localctx = new ImportacionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(TRAIGASE);
			setState(65);
			match(ID);
			setState(66);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionesContext extends ParserRuleContext {
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instrucciones);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(68);
					instruccion();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(71); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	 
		public InstruccionContext() { }
		public void copyFrom(InstruccionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RetContext extends InstruccionContext {
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public RetContext(InstruccionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecContext extends InstruccionContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public DecContext(InstruccionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CondiContext extends InstruccionContext {
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public CondiContext(InstruccionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AsiContext extends InstruccionContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public AsiContext(InstruccionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprLlamadaMetodoLibContext extends InstruccionContext {
		public TerminalNode PUNTOPUNTO() { return getToken(gramaticaParser.PUNTOPUNTO, 0); }
		public List<TerminalNode> ID() { return getTokens(gramaticaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(gramaticaParser.ID, i);
		}
		public TerminalNode PUNTO() { return getToken(gramaticaParser.PUNTO, 0); }
		public TerminalNode PAR_IZQ() { return getToken(gramaticaParser.PAR_IZQ, 0); }
		public TerminalNode PAR_DER() { return getToken(gramaticaParser.PAR_DER, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(gramaticaParser.PUNTO_COMA, 0); }
		public ArgumentosContext argumentos() {
			return getRuleContext(ArgumentosContext.class,0);
		}
		public ExprLlamadaMetodoLibContext(InstruccionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForContext extends InstruccionContext {
		public Ciclo_forContext ciclo_for() {
			return getRuleContext(Ciclo_forContext.class,0);
		}
		public ForContext(InstruccionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DefFuncContext extends InstruccionContext {
		public Definicion_funcionContext definicion_funcion() {
			return getRuleContext(Definicion_funcionContext.class,0);
		}
		public DefFuncContext(InstruccionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhileContext extends InstruccionContext {
		public Ciclo_whileContext ciclo_while() {
			return getRuleContext(Ciclo_whileContext.class,0);
		}
		public WhileContext(InstruccionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImpContext extends InstruccionContext {
		public ImpresionContext impresion() {
			return getRuleContext(ImpresionContext.class,0);
		}
		public ImpContext(InstruccionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LlamadaFuncContext extends InstruccionContext {
		public Llamada_funcionContext llamada_funcion() {
			return getRuleContext(Llamada_funcionContext.class,0);
		}
		public LlamadaFuncContext(InstruccionContext ctx) { copyFrom(ctx); }
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_instruccion);
		int _la;
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new DecContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				declaracion();
				}
				break;
			case 2:
				_localctx = new ImpContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				impresion();
				}
				break;
			case 3:
				_localctx = new CondiContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				condicion();
				}
				break;
			case 4:
				_localctx = new AsiContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				asignacion();
				}
				break;
			case 5:
				_localctx = new WhileContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(77);
				ciclo_while();
				}
				break;
			case 6:
				_localctx = new ForContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(78);
				ciclo_for();
				}
				break;
			case 7:
				_localctx = new DefFuncContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(79);
				definicion_funcion();
				}
				break;
			case 8:
				_localctx = new ExprLlamadaMetodoLibContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(80);
				match(PUNTOPUNTO);
				setState(81);
				match(ID);
				setState(82);
				match(PUNTO);
				setState(83);
				match(ID);
				setState(84);
				match(PAR_IZQ);
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8086896640L) != 0)) {
					{
					setState(85);
					argumentos();
					}
				}

				setState(88);
				match(PAR_DER);
				setState(89);
				match(PUNTO_COMA);
				}
				break;
			case 9:
				_localctx = new LlamadaFuncContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(90);
				llamada_funcion();
				}
				break;
			case 10:
				_localctx = new RetContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(91);
				retorno();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Definicion_funcionContext extends ParserRuleContext {
		public TerminalNode FUNCA() { return getToken(gramaticaParser.FUNCA, 0); }
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public TerminalNode PREG_IZQ() { return getToken(gramaticaParser.PREG_IZQ, 0); }
		public TerminalNode PREG_DER() { return getToken(gramaticaParser.PREG_DER, 0); }
		public TerminalNode BLOQUE_FUNCION() { return getToken(gramaticaParser.BLOQUE_FUNCION, 0); }
		public ArgumentosContext argumentos() {
			return getRuleContext(ArgumentosContext.class,0);
		}
		public Definicion_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_funcion; }
	}

	public final Definicion_funcionContext definicion_funcion() throws RecognitionException {
		Definicion_funcionContext _localctx = new Definicion_funcionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_definicion_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(FUNCA);
			setState(95);
			match(ID);
			setState(96);
			match(PREG_IZQ);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8086896640L) != 0)) {
				{
				setState(97);
				argumentos();
				}
			}

			setState(100);
			match(PREG_DER);
			setState(101);
			match(BLOQUE_FUNCION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Llamada_funcionContext extends ParserRuleContext {
		public Token nombre;
		public TerminalNode PUNTOPUNTO() { return getToken(gramaticaParser.PUNTOPUNTO, 0); }
		public TerminalNode PAR_IZQ() { return getToken(gramaticaParser.PAR_IZQ, 0); }
		public TerminalNode PAR_DER() { return getToken(gramaticaParser.PAR_DER, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(gramaticaParser.PUNTO_COMA, 0); }
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public ArgumentosContext argumentos() {
			return getRuleContext(ArgumentosContext.class,0);
		}
		public Llamada_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamada_funcion; }
	}

	public final Llamada_funcionContext llamada_funcion() throws RecognitionException {
		Llamada_funcionContext _localctx = new Llamada_funcionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_llamada_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(PUNTOPUNTO);
			setState(104);
			((Llamada_funcionContext)_localctx).nombre = match(ID);
			setState(105);
			match(PAR_IZQ);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8086896640L) != 0)) {
				{
				setState(106);
				argumentos();
				}
			}

			setState(109);
			match(PAR_DER);
			setState(110);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentosContext extends ParserRuleContext {
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> PUNTO_COMA() { return getTokens(gramaticaParser.PUNTO_COMA); }
		public TerminalNode PUNTO_COMA(int i) {
			return getToken(gramaticaParser.PUNTO_COMA, i);
		}
		public ArgumentosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentos; }
	}

	public final ArgumentosContext argumentos() throws RecognitionException {
		ArgumentosContext _localctx = new ArgumentosContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_argumentos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			expresion(0);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUNTO_COMA) {
				{
				{
				setState(113);
				match(PUNTO_COMA);
				setState(114);
				expresion(0);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloque_funcionContext extends ParserRuleContext {
		public List<TerminalNode> COMILLAS() { return getTokens(gramaticaParser.COMILLAS); }
		public TerminalNode COMILLAS(int i) {
			return getToken(gramaticaParser.COMILLAS, i);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public Bloque_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_funcion; }
	}

	public final Bloque_funcionContext bloque_funcion() throws RecognitionException {
		Bloque_funcionContext _localctx = new Bloque_funcionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bloque_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(COMILLAS);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1073763256L) != 0)) {
				{
				setState(121);
				instrucciones();
				}
			}

			setState(124);
			match(COMILLAS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RetornoContext extends ParserRuleContext {
		public TerminalNode MANDELE() { return getToken(gramaticaParser.MANDELE, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(gramaticaParser.PUNTO_COMA, 0); }
		public RetornoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retorno; }
	}

	public final RetornoContext retorno() throws RecognitionException {
		RetornoContext _localctx = new RetornoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_retorno);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(MANDELE);
			setState(127);
			expresion(0);
			setState(128);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(gramaticaParser.VAR, 0); }
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(gramaticaParser.IGUAL, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(gramaticaParser.PUNTO_COMA, 0); }
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(VAR);
			setState(131);
			match(ID);
			setState(132);
			match(IGUAL);
			setState(133);
			expresion(0);
			setState(134);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImpresionContext extends ParserRuleContext {
		public TerminalNode MUECHE() { return getToken(gramaticaParser.MUECHE, 0); }
		public TerminalNode PAR_IZQ() { return getToken(gramaticaParser.PAR_IZQ, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PAR_DER() { return getToken(gramaticaParser.PAR_DER, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(gramaticaParser.PUNTO_COMA, 0); }
		public ImpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresion; }
	}

	public final ImpresionContext impresion() throws RecognitionException {
		ImpresionContext _localctx = new ImpresionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_impresion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(MUECHE);
			setState(137);
			match(PAR_IZQ);
			setState(138);
			expresion(0);
			setState(139);
			match(PAR_DER);
			setState(140);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
